# BuildPipeline

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
benchmarks/: CMakeLists.txt  bench_main.cpp
cmake/: Format.cmake  Sanitize.cmake
greeter/: CMakeLists.txt
greeter/include/greeter/: Greeter.h
greeter/src/: Greeter.cpp  InternalDetails.h
tests/: CMakeLists.txt  main.cpp
